# libogg_ForAndroidNDKAudio

./: README.md  gradle.properties  settings.gradle
gradle/wrapper/: gradle-wrapper.properties
ogg/: CMakeLists.txt  build.gradle  proguard-rules.pro
ogg/src/main/: AndroidManifest.xml
ogg/src/main/cpp/: ScanDir.bat  ScanDirFileList.txt
ogg/src/main/cpp/ogg/: 说明.txt
ogg/src/main/cpp/ogg/include/: os_types.h
ogg/src/main/cpp/ogg/src/: analysis.c  bitrate.c  bitrate.h  bitwise.c  block.c  codebook.c  codebook.h  envelope.c  floor0.c  floor1.c  framing.c  info.c  lpc.h  mapping0.c  mdct.c  mdct.h  misc.h  os.h  psy.c  registry.c  res0.c  sharedbook.c  smallft.h  synthesis.c  vorbis.def  vorbisenc.c  vorbisfile.c
ogg/src/main/cpp/ogg/src/modes/: floor_all.h  residue_44.h  residue_44p51.h  residue_44u.h  residue_8.h
ogg/src/main/res/values/: strings.xml
